--- a/Nodejs/package.json
+++ b/Nodejs/package.json
@@ -2,10 +2,11 @@
   "name": "yychacks_2024",
   "version": "1.0.0",
   "description": "yyc hacks 2024",
-  "main": "index.js",
+  "main": "app/index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "ts-node ./app/index.ts",
+    "dev": "nodemon --watch \"app/**\" --ext \"ts,json\" --exec \"ts-node ./app/index.ts\""
   },
   "author": "",
   "license": "ISC",
@@ -16,5 +17,14 @@
   "engines": {
     "node": ">=20",
     "npm": ">=10"
+  },
+  "devDependencies": {
+    "@types/cors": "^2.8.14",
+    "@types/express": "^4.17.18",
+    "@types/node": "^20.8.3",
+    "concurrently": "^8.2.1",
+    "nodemon": "^3.0.3",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.3"
   }
 }
