--- a/my-app/package.json
+++ b/my-app/package.json
@@ -41,6 +41,8 @@
     "npm": ">=10"
   },
   "devDependencies": {
+    "css-loader": "^6.10.0",
+    "style-loader": "^3.3.4",
     "tailwindcss": "^3.4.1"
   }
 }
